# StillUselessRos2

./: .gitignore  README.md  TRANSFER_ACTION.md  ros2iwandwi.repos
src/robotis_manager/: package.xml  setup.cfg  setup.py
src/robotis_manager/config/: camera_param.yaml
src/robotis_manager/launch/: robotis_action.launch.py  robotis_action_editor.launch.py  robotis_bringup.launch.py  robotis_calibrate.launch.py  robotis_camera.launch.py  robotis_main.launch.py  robotis_manager.launch.py
src/robotis_manager/robotis_manager/: action_bin_tool.py  main_calibrate.py  main_head_tracking.py  main_motion_driver.py  main_node_handler.py  main_ssh_control.py  main_task_control.py  main_task_control_backup.py  motion_PID.py  motion_control_module.py  motion_data_flow_handler.py  motion_head_control_module.py  motion_module.py  motion_utility.py  robocup_game_control_data.py  robocup_game_controller_handler.py  robocup_udp_controller_handler.py  vision_data_sender.py  vision_image.py  vision_kalman_filter.py  vision_main.py  vision_ros_handler.py  vision_utils.py  vision_yolov3.py
src/robotis_manager/robotis_manager/data/: robotis_goal_pos.txt  robotis_green_field.txt  robotis_main_vision_configurator.json  robotis_orange_ball.txt
